-pagination and login

--- a/abdelboutar-service/src/main/resources/application.properties
+++ b/abdelboutar-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 jwt.secret=1qaz@WSX3edc
 #mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/abdelboutar
+spring.datasource.url=jdbc:mysql://localhost:3306/abdelboutar?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 #hibernate
